# macOSLab

./: .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_CHAT_PROMPTS.md  GEMINI.md  GETTING_STARTED_EXISTING_REPO.md  GETTING_STARTED_NEW_REPO.md  OPTIONAL_CONFIGURATIONS.md  README.md  SECURITY.md  TEMPLATE_MAINTENANCE.md  TODO-Phase-00-Branch-Protection.md  TODO-Phase-04-Media-Acquisition.md  TODO-Phase-05-Parallels-Provider.md  TODO-Phase-06-UTM-Provider.md  TODO-Phase-07-Evidence-Pipeline.md  TODO-Phase-08-Validation-Loop.md  TODO-Phase-10-Deferred-Work.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: CODEOWNERS  TEMPLATE_DESIGN_DECISIONS.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml
.github/instructions/: docs.instructions.md  gitattributes.instructions.md  json.instructions.md  powershell.instructions.md  python.instructions.md  terraform.instructions.md  yaml.instructions.md
.github/scripts/: lint-nested-markdown.js
.github/workflows/: auto-fix-precommit.yml  check-placeholders.yml  data-ci.yml  markdownlint.yml  pester.yml  powershell-ci.yml  precommit-ci.yml  python-ci.yml  terraform-ci.yml
docs/: Apple-Silicon-Constraints.md  CI-and-Tart.md  ConfigMgr-Inventory-Bridge.md  Defender.md  Demo-Runbook.md  Evidence-Redaction.md  Evidence-and-CAB.md  Fidelity-Boundaries.md  FileVault.md  Hypervisor-Decision-Guide.md  Intune-Validation.md  Log-Analytics-Integration.md  PPPC-TCC.md  PR_REVIEW_PROMPTS.md  Prereqs.md  Provider-Version-Matrix.md  Snapshot-Strategy.md  Start-Here.md  Troubleshooting.md  Windows-Admin-Cheat-Sheet.md  phase-0-bootstrap-codex-instructions.md  phase-0-bootstrap-pr-description.md
docs/planning/: EXAMPLE-slides-from-another-talk.md  demo-pivot-plan.md  macOS-imaging-01a-CFP-submission.md  macOS-imaging-03a-bolstered-outline.md  macOS-imaging-05-recommended-software.md  macOS-imaging-08c-repo-spec-final.md  macOS-imaging-08e-ADRs.md  macOS-imaging-09a-generated-slides.md  macos-imaging-05c-recommended-software-step-by-step-revised.md
docs/prompts/: codex-goal-full-implementation.md
docs/spec/: macOSLab-repository-spec.md
docs/terraform/: TERRAFORM_LINTING_GUIDE.md  TERRAFORM_TESTING_GUIDE.md
examples/MMSMOA-2026/: Demo1-Media.ps1  Demo2-Parallels.ps1  Demo3-UTM.ps1  Demo4-GatekeeperRollback.ps1  Demo4-IntuneValidation.ps1  demo-config.yml
examples/TestCases/: Compliance-SmokeTest.yml  Defender-Validation.yml  FileVault-Smoke.yml  Gatekeeper-AppStoreOnly.yml  Gatekeeper-Recovered.yml  PPPC-TCC.yml
examples/TestCases/fixtures/: app-launch-firefox-blocked-dialog.txt  app-launch-vscode-blocked-dialog.txt  app-launch-vscode-recovered.txt  gatekeeper-status-appstore-only.txt  gatekeeper-status-baseline.txt  gatekeeper-vscode-accepted.txt  gatekeeper-vscode-rejected.txt  mdatp-health-healthy.txt  mdatp-health-unhealthy.txt  profiles-system-policy-control-redacted.txt
examples/utm/: macos-lab-template.utm.json
schemas/: README.md  evidence-bundle.schema.json
schemas/examples/evidence-bundle/invalid/: missing-redaction.json  unredacted-device-id.json
schemas/examples/evidence-bundle/valid/: defender-host-guest-scope.json  full.json  gatekeeper-appstore-only.json  minimal.json  provider-no-vms.json
scripts/: Checkpoint-MacVm.ps1  Get-MacOSRestoreImage.ps1  Install-Prereqs.ps1  Invoke-MMSDemo.ps1  New-MacInstallArtifact.ps1  New-MacVm.ps1  Remove-MacVm.ps1  Reset-IntuneMacLabDevice.ps1  Restore-MacVmCheckpoint.ps1  Send-LabEventToLogAnalytics.ps1  Test-LabReadiness.ps1
src/Modules/MacLab/: MacLab.psd1  MacLab.psm1
src/Modules/MacLab/Private/: Invoke-LoggedCommand.ps1  Protect-MacLabEvidence.ps1  Resolve-MacLabConfig.ps1  Write-EvidenceRecord.ps1
src/Modules/MacLab/Providers/: Parallels.ps1  Tart.ps1  UTM.ps1
src/Modules/MacLab/Public/: Checkpoint-MacLabVm.ps1  Export-MacLabEvidence.ps1  Get-MacLabMedia.ps1  Get-MacLabVm.ps1  Invoke-MacPolicyValidation.ps1  New-MacLabVm.ps1  Remove-MacLabVm.ps1  Restore-MacLabVmCheckpoint.ps1  Start-MacLabVm.ps1  Stop-MacLabVm.ps1
templates/python/: README.md  pyproject.toml
templates/python/tests/: test_schema_examples.py
tests/: Demo.Tests.ps1  Evidence.Tests.ps1  MacLab.Tests.ps1  Media.Tests.ps1  Phase10.Tests.ps1  Providers.Parallels.Tests.ps1  Providers.UTM.Tests.ps1  Readiness.Tests.ps1  Validation.Tests.ps1  test_schema_examples.py
